--- a/web/src/style.css
+++ b/web/src/style.css
@@ -25,9 +25,7 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
   min-width: 320px;
-  min-height: 100vh;
 }
 
 h1 {
@@ -59,9 +57,8 @@ button:focus-visible {
 }
 
 #app {
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  margin: 0;
+  padding: 0;
 }
 
 @media (prefers-color-scheme: light) {
