--- a/web/src/style.css
+++ b/web/src/style.css
@@ -56,6 +56,11 @@ button:focus-visible {
   padding: 2em;
 }
 
+.shadow {
+  -webkit-filter: drop-shadow( 3px 3px 2px rgba(0, 0, 0, .7));
+  filter: drop-shadow( 3px 3px 2px rgba(0, 0, 0, .7));
+}
+
 #app {
   margin: 0;
   padding: 0;
