Throwing stuff in there

--- a/web/src/styles/sm.css
+++ b/web/src/styles/sm.css
@@ -1,4 +1,10 @@
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
+  .flex-container > * {
+    padding: 1.5rem;
+  }
 
+  body {
+    background: green;
+  }
 }
