--- a/web/src/styles/base.css
+++ b/web/src/styles/base.css
@@ -10,17 +10,40 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  --background-color: #242424;
-  background-color: var(--background-color);
+  color: rgba(0, 0, 0, 1);
+  /*--background-color: #242424;
+  background-color: var(--background-color);*/
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --body-color: #000000;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 body {
+}
+
+.themed {
+  color: var(--body-color);
+  background: var(--background-color);
+
+  & h1, h2, h3 {
+    color: var(--secondary-color);
+  }
+
+  & .secondary {
+    color: var(--accent-color);
+    background: var(--secondary-background);
+    &a {
+      color: var(--accent-color);
+    }
+  }
 }
 
 a {
@@ -35,6 +58,7 @@ body {
   margin: 0;
   display: flex;
   min-width: 320px;
+  background: blue;
 }
 
 h1 {
@@ -52,16 +76,55 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
-  transition: border-color 0.25s;
+  /*transition: border-color 0.25s;*/
 }
 button:hover {
   border-color: #646cff;
 }
 button:focus,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  /*outline: 4px auto -webkit-focus-ring-color;*/
+}
+
+button.hamburger-toggle {
+  background-color: transparent;
+  display: flex;
+  padding: 0.5em;
+  min-width: 40px;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+button.btn-primary {
+  background: var(--primary-color);
+}
+
+button.btn-success {
+  background: var(--success-color);
+}
+button.btn-warning {
+  background: var(--warning-color);
+}
+button.btn-danger {
+  background: var(--danger-color);
+}
+
+button > span.icon-bar {
+  width: 100%;
+  height: 5px;
+  margin: 2px;
+  background: black;
+}
+
+.button-group {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  & button {
+    margin: 5px 0;
+  }
 }
 
 .card {
@@ -74,6 +137,36 @@ button:focus-visible {
 }
 
 #app {
+  width: 100vw;
   margin: 0;
   padding: 0;
+}
+
+.flex-container {
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.flex-container > * {
+  flex: 1 100%;
+}
+
+.flex-container {
+  .col { flex: 1 0 0; }
+  .col-2 { flex: 2 0 0; }
+  .col-3 { flex: 3 0 0; }
+  .col-4 { flex: 4 0 0; }
+  .col-5 { flex: 5 0 0; }
+  .col-6 { flex: 6 0 0; }
+  .col-7 { flex: 7 0 0; }
+  .col-8 { flex: 8 0 0; }
+
+  .col-shrink   { flex: 1 0 0; }
+  .col-shrink-2 { flex: 2 0 0; }
+  .col-shrink-3 { flex: 3 0 0; }
+  .col-shrink-4 { flex: 4 0 0; }
+  .col-shrink-5 { flex: 5 0 0; }
+  .col-shrink-6 { flex: 6 0 0; }
+  .col-shrink-7 { flex: 7 0 0; }
+  .col-shrink-8 { flex: 8 0 0; }
 }
