Theme builder almost complete

--- a/web/src/styles/base.css
+++ b/web/src/styles/base.css
@@ -38,7 +38,7 @@ body {
   }
 
   & .secondary {
-    color: var(--accent-color);
+    color: var(secondary);
     background: var(--secondary-background);
     &a {
       color: var(--accent-color);
