--- a/web/src/styles/wireframe.css
+++ b/web/src/styles/wireframe.css
@@ -3,7 +3,7 @@ body { margin: 30px; }
 see where your offending elements cross the line */
 
 body * { outline: 1px solid red; }
-/* Alternate: add an outline  to all elements on the page. Won't effect box model */
+/* add an outline  to all elements on the page. Won't effect box model */
 
 div#offending-area * { outline: 1px solid red; }
 /* If you've got some idea about where the issue is, drill down further than the body tag */
