--- a/web/src/styles/base.css
+++ b/web/src/styles/base.css
@@ -29,19 +29,161 @@
 body {
 }
 
+#app {
+}
+
+.pageContent {
+  flex: 1 0 0;
+}
+
 .themed {
   color: var(--body-color);
   background: var(--background-color);
 
-  & h1, h2, h3 {
-    color: var(--secondary-color);
+  h1, h2, h3 {
+    color: var(--primary-color);
   }
 
-  & .secondary {
-    color: var(secondary);
-    background: var(--secondary-background);
+  .primary {
+    background: var(--primary-color);
     &a {
       color: var(--accent-color);
+    }
+  }
+
+  .dark {
+    background: var(--dark-color);
+    & a {
+      color: var(--dark-color);
+    }
+  }
+
+  .light {
+    background: var(--light-color);
+    & a {
+      color: var(--light-color);
+    }
+  }
+
+  .secondary {
+    background: var(--secondary-color);
+    a {
+      color: var(--accent-color);
+    }
+  }
+
+  .accent {
+    background: var(--accent-color);
+  }
+
+  button {
+    background: var(--primary-color);
+    span {
+      color: var(--secondary-color);
+    }
+
+    span {
+      filter: invert(1) grayscale(1) brightness(1.3) contrast(9000);
+      mix-blend-mode: luminosity;
+      opacity: 0.95;
+    }
+    &:hover {
+      border-color: var(--border-color);
+    }
+
+    &.primary {
+      span {
+        color: var(--primary-color);
+      }
+
+      &:hover {
+        background: color-mix(in srgb, var(--primary-color) 80%, black);
+      }
+    }
+    &.secondary {
+      background: var(--secondary-color);
+      span {
+        color: var(--secondary-color);
+      }
+
+      &:hover {
+        background: color-mix(in srgb, var(--secondary-color) 80%, black);
+      }
+    }
+    &.success {
+      background: var(--success-color);
+      span {
+        color: var(--success-color);
+      }
+
+      &:hover {
+        background: color-mix(in srgb, var(--success-color) 80%, black);
+      }
+    }
+    &.warning {
+      background: var(--warning-color);
+      span {
+        color: var(--warning-color);
+      }
+
+      &:hover {
+        background: color-mix(in srgb, var(--warning-color) 80%, black);
+      }
+    }
+    &.danger {
+      background: var(--danger-color);
+      span {
+        color: var(--danger-color);
+      }
+
+      &:hover {
+        background: color-mix(in srgb, var(--danger-color) 80%, black);
+      }
+    }
+    &.info {
+      background: var(--info-color);
+      span {
+        color: var(--info-color);
+      }
+
+      &:hover {
+        background: color-mix(in srgb, var(--info-color) 80%, black);
+      }
+    }
+  }
+
+  ul {
+    background-color: var(--callout-color);
+  }
+
+  a {
+    color: var(--primary-color);
+  }
+}
+
+.decorated {
+  & ul {
+    list-style: none;
+    border: 1px solid var(--border-color);
+    border-radius: 8px;
+    padding: 0;
+    margin: 0;
+
+    & ul {
+      border-right: 0;
+      border-top-right-radius: 0;
+      border-bottom-right-radius: 0;
+      border-bottom: 0;
+    }
+
+    & li {
+      border-bottom: 1px solid var(--border-color);
+      padding: 1em;
+      padding-right: 0;
+      margin: 0;
+      &:last-child {
+        border-bottom: 0;
+      }
     }
   }
 }
@@ -49,9 +191,9 @@ body {
 a {
   font-weight: 500;
   text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+  &:hover {
+    color: #535bf2;
+  }
 }
 
 body {
@@ -66,8 +208,6 @@ h1 {
   line-height: 1.1;
 }
 
-h1,h2,h3 {
-}
 
 button {
   border-radius: 8px;
@@ -97,19 +237,6 @@ button.hamburger-toggle {
   flex-direction: column;
 }
 
-button.btn-primary {
-  background: var(--primary-color);
-}
-
-button.btn-success {
-  background: var(--success-color);
-}
-button.btn-warning {
-  background: var(--warning-color);
-}
-button.btn-danger {
-  background: var(--danger-color);
-}
 
 button > span.icon-bar {
   width: 100%;
@@ -138,8 +265,12 @@ button > span.icon-bar {
 
 #app {
   width: 100vw;
+  height: 100vh;
+  overflow: scroll;
   margin: 0;
   padding: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 .flex-container {
